Salesforce LWC/force-app/main/default/objects/Sales_Office__c/Sales_Office__c.object-meta.xml
<CustomObject>
    <label>Sales Office</label>
    <nameField>
        <label>Sales Office Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Offices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>