Salesforce LWC/force-app/main/default/objects/Sales_Office__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sales Offices</relationshipLabel>
    <relationshipName>Sales_Offices</relationshipName>
    <type>Lookup</type>
</CustomField>