Salesforce LWC/force-app/main/default/objects/Sales_Office__c/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <label>Sales Region</label>
    <referenceTo>Sales_Region__c</referenceTo>
    <relationshipLabel>Sales Offices</relationshipLabel>
    <relationshipName>Sales_Offices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>