Salesforce LWC/force-app/main/default/objects/Sales_Office__c/fields/Year_to_Date_Sales__c.field-meta.xml
<CustomField>
    <fullName>Year_to_Date_Sales__c</fullName>
    <label>Year to Date Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>